--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.nutz</groupId>
 	<artifactId>nutzmore</artifactId>
-	<version>1.r.58-SNAPSHOT</version>
+	<version>1.r.58</version>
 	<name>nutzmore</name>
 	<description>Nutz, which is a collections of lightweight frameworks, each of them can be used independently</description>
 
@@ -48,7 +48,7 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz</artifactId>
-			<version>1.r.57.r3</version>
+			<version>1.r.58</version>
 		</dependency>
 	</dependencies>
 
@@ -61,6 +61,10 @@
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
+					<compilerArgs>
+						<arg>-parameters</arg>
+					</compilerArgs>
+					<useIncrementalCompilation>false</useIncrementalCompilation>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -84,6 +88,7 @@
 	</build>
 	<packaging>pom</packaging>
 	<modules>
+		<module>nutz-plugins-sfntly</module>
 		<module>nutz-integration-spring</module>
 		<module>nutz-integration-jcache</module>
 		<module>nutz-integration-jsr303</module>
@@ -91,33 +96,30 @@
 		<module>nutz-integration-dwr</module>
 		<module>nutz-integration-jsf</module>
 		<module>nutz-integration-shiro</module>
+		<module>nutz-integration-dubbo</module>
+		<module>nutz-integration-jsch</module>
+		<module>nutz-integration-struts2</module>
+		<module>nutz-integration-zbus</module>
+		<module>nutz-integration-hessian</module>
 		<module>nutz-plugins-validation</module>
 		<module>nutz-plugins-views</module>
 		<module>nutz-plugins-multiview</module>
 		<module>nutz-plugins-xmlentitymaker</module>
 		<module>nutz-plugins-iocloader</module>
-		<module>nutz-integration-jsch</module>
 		<module>nutz-plugins-daocache</module>
 		<module>nutz-plugins-protobuf</module>
 		<module>nutz-plugins-sqltpl</module>
 		<module>nutz-plugins-secken</module>
-		<module>nutz-integration-struts2</module>
-		<module>nutz-integration-zbus</module>
-		<module>nutz-integration-hessian</module>
 		<module>nutz-plugins-jsonrpc</module>
-		<module>nutz-plugins-webqq</module>
 		<module>nutz-plugins-sigar</module>
 		<module>nutz-plugins-jedis</module>
-		<module>nutz-integration-dubbo</module>
-		<module>nutz-plugins-sfntly</module>
 		<module>nutz-plugins-mock</module>
 		<module>nutz-plugins-qrcode</module>
-        <module>nutz-plugins-wxrobot</module>
         <module>nutz-plugins-nop</module>
         <module>nutz-plugins-apidoc</module>
 	</modules>
 	<properties>
-		<nutz.version>1.r.57.r3</nutz.version>
+		<nutz.version>1.r.58</nutz.version>
 	</properties>
 	<distributionManagement>
 		<snapshotRepository>
