--- a/nutz-plugins-multiview/pom.xml
+++ b/nutz-plugins-multiview/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.58-SNAPSHOT</version>
+		<version>1.r.58</version>
 	</parent>
 	<artifactId>nutz-plugins-multiview</artifactId>
 	<description>Nutz More multiView</description>
@@ -72,6 +72,10 @@
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
+					<compilerArgs>
+						<arg>-parameters</arg>
+					</compilerArgs>
+					<useIncrementalCompilation>false</useIncrementalCompilation>
 				</configuration>
 			</plugin>
 			<plugin>
