--- a/nutz-plugins-sqltpl/pom.xml
+++ b/nutz-plugins-sqltpl/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.58-SNAPSHOT</version>
+		<version>1.r.58</version>
 	</parent>
 	<artifactId>nutz-plugins-sqltpl</artifactId>
 	<description>
@@ -40,11 +40,28 @@
 		<developerConnection>scm:git:git://github.com/nutzam/nutzmore.git</developerConnection>
 		<url>git://github.com/nutzam/nutzmore.git</url>
 	</scm>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+					<compilerArgs>
+						<arg>-parameters</arg>
+					</compilerArgs>
+					<useIncrementalCompilation>false</useIncrementalCompilation>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<dependencies>
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz</artifactId>
-			<version>1.r.54</version>
+			<version>1.r.58</version>
 		</dependency>
 		<dependency>
 			<groupId>com.ibeetl</groupId>
