--- a/nutz-plugins-webqq/pom.xml
+++ b/nutz-plugins-webqq/pom.xml
@@ -3,10 +3,26 @@
   <parent>
     <groupId>org.nutz</groupId>
     <artifactId>nutzmore</artifactId>
-    <version>1.r.58-SNAPSHOT</version>
+    <version>1.r.58</version>
   </parent>
   <artifactId>nutz-plugins-webqq</artifactId>
-  <build/>
+  <build>
+  	<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+					<compilerArgs>
+						<arg>-parameters</arg>
+					</compilerArgs>
+					<useIncrementalCompilation>false</useIncrementalCompilation>
+				</configuration>
+			</plugin>
+		</plugins>
+  </build>
   <dependencies>
   	<dependency>
             <groupId>net.dongliu</groupId>
