--- a/nutz-plugins-wxrobot/pom.xml
+++ b/nutz-plugins-wxrobot/pom.xml
@@ -2,8 +2,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.nutz</groupId>
-	<artifactId>wxrobot</artifactId>
-	<version>1.r.58-SNAPSHOT</version>
+	<artifactId>nutz-plugins-wxrobot</artifactId>
+	<version>1.r.58</version>
 	<packaging>jar</packaging>
 
 	<name>nutz-plugin-wxrobot</name>
@@ -40,12 +40,12 @@
 		<dependency>
             <groupId>org.nutz</groupId>
             <artifactId>nutz</artifactId>
-            <version>1.r.58-SNAPSHOT</version>
+            <version>1.r.58</version>
         </dependency>
 <!-- 		<dependency>
             <groupId>org.nutz</groupId>
             <artifactId>nutzwx</artifactId>
-            <version>1.r.58-SNAPSHOT</version>
+            <version>1.r.58</version>
         </dependency> -->
 	</dependencies>
 
