--- a/nutz-integration-autoloadcache/pom.xml
+++ b/nutz-integration-autoloadcache/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.58</version>
+		<version>1.r.59-SNAPSHOT</version>
 	</parent>
 	<artifactId>nutz-integration-autoloadcache</artifactId>
 	<properties>
@@ -51,7 +51,7 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz</artifactId>
-			<version>1.r.58</version>
+			<version>1.r.59-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<build>
