--- a/nutz-integration-zbus/pom.xml
+++ b/nutz-integration-zbus/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.58</version>
+		<version>1.r.59-SNAPSHOT</version>
 	</parent>
 	<artifactId>nutz-integration-zbus</artifactId>
 	<dependencies>
