--- a/nutz-plugins-webqq/pom.xml
+++ b/nutz-plugins-webqq/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.nutz</groupId>
     <artifactId>nutzmore</artifactId>
-    <version>1.r.58</version>
+    <version>1.r.59-SNAPSHOT</version>
   </parent>
   <artifactId>nutz-plugins-webqq</artifactId>
   <build>
