--- a/nutz-integration-zbus/pom.xml
+++ b/nutz-integration-zbus/pom.xml
@@ -11,7 +11,12 @@
 		<dependency>
 			<groupId>org.zbus</groupId>
 			<artifactId>zbus</artifactId>
-			<version>6.2.7</version>
+			<version>7.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.0.34.Final</version>
 		</dependency>
 	</dependencies>
 	<description>Nutz Zbus</description>
