--- a/nutz-plugins-wxrobot/pom.xml
+++ b/nutz-plugins-wxrobot/pom.xml
@@ -15,8 +15,8 @@
 
 	<repositories>
 		<repository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<id>nutzcn-snapshots</id>
+			<url>http://maven.nutz.cn/nexus/content/repositories/snapshots</url>
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
@@ -75,9 +75,9 @@
 
 	<distributionManagement>
 		<snapshotRepository>
-			<id>sonatype-snapshots</id>
-			<name>Sonatype Nexus snapshot repository</name>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<id>nutzcn-snapshots</id>
+			<name>NutzCN snapshot repository</name>
+			<url>http://maven.nutz.cn/nexus/content/repositories/snapshots</url>
 		</snapshotRepository>
 
 		<repository>
