--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,8 @@
 	</scm>
 	<repositories>
 		<repository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<id>nutzcn-snapshots</id>
+			<url>http://maven.nutz.cn/nexus/content/repositories/snapshots</url>
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
@@ -132,9 +132,9 @@
 	</properties>
 	<distributionManagement>
 		<snapshotRepository>
-			<id>sonatype-snapshots</id>
-			<name>Sonatype Nexus snapshot repository</name>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<id>nutzcn-snapshots</id>
+			<name>NutzCN snapshot repository</name>
+			<url>http://maven.nutz.cn/nexus/content/repositories/snapshots</url>
 		</snapshotRepository>
 
 		<repository>
