--- a/nutz-plugins-sigar/pom.xml
+++ b/nutz-plugins-sigar/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.59-SNAPSHOT</version>
+		<version>1.r.59</version>
 	</parent>
 	<artifactId>nutz-plugins-sigar</artifactId>
 	<description>Nutz Sigar</description>
