--- a/nutz-integration-jsr303/pom.xml
+++ b/nutz-integration-jsr303/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.59</version>
+		<version>1.r.60-SNAPSHOT</version>
 	</parent>
 	<artifactId>nutz-integration-jsr303</artifactId>	
 	<description>Nutz and JSR 303</description>
