--- a/nutz-plugins-multiview/pom.xml
+++ b/nutz-plugins-multiview/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.59</version>
+		<version>1.r.60-SNAPSHOT</version>
 	</parent>
 	<artifactId>nutz-plugins-multiview</artifactId>
 	<description>Nutz More multiView</description>
