--- a/nutz-plugins-wxrobot/pom.xml
+++ b/nutz-plugins-wxrobot/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.nutz</groupId>
 	<artifactId>nutz-plugins-wxrobot</artifactId>
-	<version>1.r.59</version>
+	<version>1.r.60-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>nutz-plugin-wxrobot</name>
@@ -40,12 +40,12 @@
 		<dependency>
             <groupId>org.nutz</groupId>
             <artifactId>nutz</artifactId>
-            <version>1.r.59</version>
+            <version>1.r.60-SNAPSHOT</version>
         </dependency>
 <!-- 		<dependency>
             <groupId>org.nutz</groupId>
             <artifactId>nutzwx</artifactId>
-            <version>1.r.59</version>
+            <version>1.r.60-SNAPSHOT</version>
         </dependency> -->
 	</dependencies>
 
