--- a/nutz-integration-zbus/demo/pom.xml
+++ b/nutz-integration-zbus/demo/pom.xml
@@ -13,7 +13,7 @@
 	<repositories>
 		<repository>
 			<id>nutz-snapshots</id>
-			<url>http://maven.nutz.cn/nexus/content/repositories/snapshots</url>
+			<url>https://jfrog.nutz.cn/artifactory/snapshots</url>
 			<snapshots>
 				<enabled>true</enabled>
 				<updatePolicy>always</updatePolicy>
