--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,7 @@
 		<module>nutz-plugins-qrcode</module>
         <module>nutz-plugins-nop</module>
         <module>nutz-plugins-apidoc</module>
+        <module>nutz-integration-activiti</module>
 	</modules>
 	<properties>
 		<nutz.version>1.r.58</nutz.version>
