--- a/nutz-plugins-websocket/pom.xml
+++ b/nutz-plugins-websocket/pom.xml
@@ -6,4 +6,12 @@
     <version>1.r.60-SNAPSHOT</version>
   </parent>
   <artifactId>nutz-plugins-websocket</artifactId>
+  <dependencies>
+  	<dependency>
+  		<groupId>javax.websocket</groupId>
+  		<artifactId>javax.websocket-api</artifactId>
+  		<version>1.1</version>
+  		<scope>provided</scope>
+  	</dependency>
+  </dependencies>
 </project>
