add:spring-boot-nutz-dao-starter

--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,7 @@
         <module>nutz-plugins-apidoc</module>
         <module>nutz-plugins-websocket</module>
         <module>nutz-plugins-slog</module>
+        <module>nutz-plugins-spring-boot-starter</module>
 	</modules>
 	<properties>
 		<nutz.version>1.r.59</nutz.version>
