--- a/nutz-integration-shiro/pom.xml
+++ b/nutz-integration-shiro/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.60-SNAPSHOT</version>
+		<version>1.r.61-SNAPSHOT</version>
 	</parent>
 	<artifactId>nutz-integration-shiro</artifactId>
 	<name>nutz-integration-shiro</name>	
 	<description>Nutz and Shiro</description>
 
-	<url>http://nutzam.com</url>
+	<url>https://nutzam.com</url>
 	<issueManagement>
 		<system>Github Issue</system>
 		<url>http://github.com/nutzam/nutzmore/issues</url>
