--- a/nutz-plugins-qrcode/pom.xml
+++ b/nutz-plugins-qrcode/pom.xml
@@ -4,10 +4,10 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.60-SNAPSHOT</version>
+		<version>1.r.61-SNAPSHOT</version>
 	</parent>
 	<artifactId>nutz-plugins-qrcode</artifactId>
-	<url>http://nutzam.com</url>
+	<url>https://nutzam.com</url>
 	<description>Qrcode for Nutz</description>
 	<issueManagement>
 		<system>Github Issue</system>
