--- a/nutz-plugins-slog/pom.xml
+++ b/nutz-plugins-slog/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.60-SNAPSHOT</version>
+		<version>1.r.61-SNAPSHOT</version>
 	</parent>
 	<artifactId>nutz-plugins-slog</artifactId>
 	<dependencies>
@@ -23,7 +23,7 @@
 	</dependencies>
 	<description>Nutz @Slog</description>
 
-	<url>http://nutzam.com</url>
+	<url>https://nutzam.com</url>
 	<issueManagement>
 		<system>Github Issue</system>
 		<url>http://github.com/nutzam/nutzmore/issues</url>
