remove: shiro的缓存实现放在新的插件目录

--- a/nutz-integration-shiro/pom.xml
+++ b/nutz-integration-shiro/pom.xml
@@ -85,6 +85,11 @@
 			<version>2.10.2.2.21</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.nutz</groupId>
+			<artifactId>nutz-plugins-cache</artifactId>
+			<version>1.r.61-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
