add: 添加nutzmore的聚合项目nutzmore-aggregate

--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,7 @@
         <module>nutz-plugins-slog</module>
         <module>nutz-plugins-spring-boot-starter</module>
         <module>nutz-plugins-cache</module>
+        <module>nutzmore-aggregate</module>
 	</modules>
 	<properties>
 		<nutz.version>1.r.59</nutz.version>
