add: rsf集成的框架文件

--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,7 @@
         <module>nutz-plugins-cache</module>
         <module>nutz-plugins-hotplug</module>
         <module>nutz-plugins-daomapping</module>
+        <module>nutz-integration-rsf</module>
 	</modules>
 	<distributionManagement>
 		<snapshotRepository>
