--- a/nutz-plugins-views/pom.xml
+++ b/nutz-plugins-views/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.61-SNAPSHOT</version>
+		<version>1.r.60.r3</version>
 	</parent>
 	<artifactId>nutz-plugins-views</artifactId>
 	<description>Nutz More Views</description>
@@ -105,7 +105,7 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz-plugins-sfntly</artifactId>
-			<version>1.r.61-SNAPSHOT</version>
+			<version>1.r.60.r3</version>
 		</dependency>
 	</dependencies>
 	<build>
