--- a/nutz-integration-hasor/demo/pom.xml
+++ b/nutz-integration-hasor/demo/pom.xml
@@ -62,7 +62,7 @@
             <dependency>
                 <groupId>org.nutz</groupId>
                 <artifactId>nutz-integration-hasor</artifactId>
-                <version>1.r.60.r3</version>
+                <version>1.r.61-SNAPSHOT</version>
             </dependency>
 
             <!-- Hasor -->
