--- a/nutz-plugins-nop/demo/nop-demo/pom.xml
+++ b/nutz-plugins-nop/demo/nop-demo/pom.xml
@@ -43,4 +43,20 @@
 			<version>1.r.61-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
+	<repositories>
+		<repository>
+			<id>*</id>
+			<url>https://jfrog.nutz.cn/artifactory/jcenter</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>*</id>
+			<url>https://jfrog.nutz.cn/artifactory/snapshots</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 </project>
