add: spring插件添加一个SpringIocLoader,用于从NutIoc的API获取Spring Ioc的bean

--- a/nutz-integration-spring/pom.xml
+++ b/nutz-integration-spring/pom.xml
@@ -81,6 +81,13 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>1.4.193</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	<build>
