--- a/nutz-plugins-hotplug/pom.xml
+++ b/nutz-plugins-hotplug/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.nutz</groupId>
     <artifactId>nutzmore</artifactId>
-    <version>1.r.60.r4</version>
+    <version>1.r.61-SNAPSHOT</version>
   </parent>
   <artifactId>nutz-plugins-hotplug</artifactId>
   <dependencies>
