--- a/nutz-plugins-ngrok/pom.xml
+++ b/nutz-plugins-ngrok/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.nutz</groupId>
     <artifactId>nutzmore</artifactId>
-    <version>1.r.60.r4</version>
+    <version>1.r.61-SNAPSHOT</version>
   </parent>
   <artifactId>nutz-plugins-ngrok</artifactId>
   
@@ -45,7 +45,7 @@
 	<dependency>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutz-integration-jedis</artifactId>
-		<version>1.r.60.r4</version>
+		<version>1.r.61-SNAPSHOT</version>
 	</dependency>
 	</dependencies>
 	<build>
