--- a/nutz-plugins-spring-boot-starter/demo/src/main/resources/application.yml
+++ b/nutz-plugins-spring-boot-starter/demo/src/main/resources/application.yml
@@ -28,8 +28,7 @@ spring:
      #   time-zone: GMT+8     #此处有巨坑 jackson就是要按照utc时间来给你序列化咋滴!!  
 logging:
   level:
-    org.nutz: debug   
-    demo: debug
+    root: debug
 nutz:
     dao:
         runtime:
