多视图重构

--- a/nutz-plugins-multiview/src/test/resources/custom/SystemGlobals.properties
+++ b/nutz-plugins-multiview/src/test/resources/custom/SystemGlobals.properties
@@ -1,3 +1,3 @@
 # If you change this value, is necessary to edit WEB-INF/web.xml as well
-servlet.extension=
-resource.dir=resources
+servlet.extension=.do
+resource.dir=http://sta.denghuafeng.com/
